--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(generate_measfile)
 export(runCARNIVAL)
 export(runDoRothEA)
 export(runPROGENy)
+export(GeneSymbol2Uniprot)
 import(doParallel)
 import(igraph)
 import(viper)
