Update to bioc guidelines
Update to bioc guidelines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,10 @@ import(dplyr)
 import(purrr)
 import(tibble)
 import(tidyr)
+import(IRanges)
+import(AnnotationDbi)
+import(GSEABase)
+import(genefilter)
+import(Category)
+import(ggplot2)
+import(UniProt.ws)
