--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,6 @@ Imports:
     UniProt.ws
 Suggests: knitr,
     rmarkdown
+VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 biocViews: Transcriptomics, GeneExpression
