--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,6 @@
 export(assignPROGENyScores)
 export(generate_measfile)
 export(runCARNIVAL)
-export(runDoRothEA)
-export(runPROGENy)
-export(GeneSymbol2Uniprot)
 import(doParallel)
 import(igraph)
 import(viper)
@@ -20,3 +17,4 @@ import(genefilter)
 import(Category)
 import(ggplot2)
 import(UniProt.ws)
+import(lpSolve)
