Update accroding to guideline codes
Update accroding to guideline codes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,6 @@
 export(assignPROGENyScores)
 export(generate_measfile)
 export(runCARNIVAL)
-export(runDoRothEA)
-export(runPROGENy)
-export(GeneSymbol2Uniprot)
 import(doParallel)
 import(igraph)
 import(viper)
@@ -13,3 +10,11 @@ import(dplyr)
 import(purrr)
 import(tibble)
 import(tidyr)
+import(IRanges)
+import(AnnotationDbi)
+import(GSEABase)
+import(genefilter)
+import(Category)
+import(ggplot2)
+import(UniProt.ws)
+import(lpSolve)
