--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CARNIVAL
 Type: Package
 Title: A CAusal Reasoning tool for Network Identification (from gene expression data) using Integer VALue programming
-Version: 0.9.3
+Version: 1.0.1
 Author: Enio Gjerga, Panuwat Trairatphisan 
 Maintainer: Enio Gjerga <enio.gjerga@gmail.com>
 Description: An upgraded causal reasoning tool from Melas et al in R with updated assignments of TFs' weights from PROGENy scores. 
@@ -11,6 +11,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     doParallel,
+    readr,
     viper,
     IRanges,
     AnnotationDbi,
@@ -25,4 +26,4 @@ Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
-biocViews: Transcriptomics, GeneExpression
+biocViews: Transcriptomics, GeneExpression, Network
