--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(assignPROGENyScores)
 export(generate_measfile)
 export(runCARNIVAL)
 import(doParallel)
+import(readr)
 import(viper)
 import(tibble)
 import(tidyr)
