removing some biocheck notes
removing some biocheck notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,12 @@ export(assignPROGENyScores)
 export(generate_measfile)
 export(runCARNIVAL)
 import(doParallel)
+import(readr)
 import(viper)
 import(tibble)
 import(tidyr)
 import(IRanges)
 import(AnnotationDbi)
-import(genefilter)
 import(Category)
 import(ggplot2)
 import(UniProt.ws)
