--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CARNIVAL
 Type: Package
 Title: A CAusal Reasoning tool for Network Identification (from gene expression data) using Integer VALue programming
-Version: 0.9.3
-Author: Enio Gjerga, Panuwat Trairatphisan 
+Version: 1.0.1
+Author: Enio Gjerga, Panuwat Trairatphisan, Anika Liu, Alberto Valdeolivas, Nikolas Peschke
 Maintainer: Enio Gjerga <enio.gjerga@gmail.com>
 Description: An upgraded causal reasoning tool from Melas et al in R with updated assignments of TFs' weights from PROGENy scores. 
              Optimization parameters can be freely adjusted and multiple solutions can be obtained and aggregated.
@@ -11,15 +11,11 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     doParallel,
-    igraph,
+    readr,
     viper,
     IRanges,
     AnnotationDbi,
-    GSEABase, 
-    genefilter,   
     Category,
-    dplyr,
-    purrr,
     tibble,
     tidyr,    
     ggplot2,
@@ -29,4 +25,4 @@ Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
-biocViews: Transcriptomics, GeneExpression
+biocViews: Transcriptomics, GeneExpression, Network
